--- a/index.html
+++ b/index.html
@@ -4,143 +4,180 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <title>Web Studio &#128136;</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="logo-web list" href="./index.html"
-          >Web<span class="logo-studio list">Studio</span></a
-        >
-        <ul>
-          <li class="link"><a class="list header-head" href="./index.html">Studio</a></li>
-          <li class="link">
-            <a class="list header-head" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="link">
-            <a class="list header-head" href="./index.html">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="link">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-link list header-head"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="header-link list header-head"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="conteiner">
+        <nav class="header-navigation">
+          <a class="logo-web list" href="./index.html"
+            >Web<span class="logo-studio list">Studio</span></a
+          >
+          <ul>
+            <li class="link">
+              <a class="list header-head" href="./index.html">Studio</a>
+            </li>
+            <li class="link">
+              <a class="list header-head" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="link">
+              <a class="list header-head" href="./index.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="link">
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-link list header-head"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="header-link list header-head"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--section#1-->
       <section class="item">
-        <h1 class="item-text">Effective Solutions for Your Business</h1>
-        <button class="item-button-title button-style" type="button">Order Service</button>
+        <div class="conteiner">
+          <h1 class="item-text conteiner-head">
+            Effective Solutions for Your Business
+          </h1>
+          <div class="cont-btn">
+            <button class="item-button-title button-style" type="button">
+              Order Service
+            </button>
+          </div>
+        </div>
       </section>
 
       <!--Discription-section#2-->
       <section class="hero">
-        <h2 class="hero-name">Advantage</h2>
-        <ul class="hero-list link">
-          <li class="hero-item">
-            <h3 class="hero-name">Strategy</h3>
-            <p class="hero-subtitle">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="hero-name">Punctuality</h3>
+        <div class="conteiner">
+          <h2 hidden>Advantage</h2>
+          <ul class="hero-list link cont-hero">
+            <li class="hero-item">
+              <h3 class="hero-name">Strategy</h3>
+              <p class="hero-subtitle">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="hero-item">
+              <h3 class="hero-name">Punctuality</h3>
 
-            <p class="hero-subtitle">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+              <p class="hero-subtitle">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="hero-name">Diligence</h3>
+            <li class="hero-item">
+              <h3 class="hero-name">Diligence</h3>
 
-            <p class="hero-subtitle">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+              <p class="hero-subtitle">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="hero-name">Technologies</h3>
+            <li class="hero-item">
+              <h3 class="hero-name">Technologies</h3>
 
-            <p class="hero-subtitle">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+              <p class="hero-subtitle">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--/Discription-section#2-->
 
       <!--Section#3-photo-->
       <section>
-        <h2 class="pic">What are we doing</h2>
-        <ul class="link">
-          <li><img src="./images/img-jpg-2.jpg" alt="screen" width="360" /></li>
-          <li><img src="./images/img-jpg-1.jpg" alt="phone" width="360" /></li>
-          <li>
-            <img
-              src="./images/img-jpg-3.jpg"
-              alt="hand with both"
-              width="360"
-            />
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="pic cont-img">What are we doing</h2>
+          <ul class="link">
+            <li>
+              <img src="./images/img-jpg-2.jpg" alt="screen" width="360" />
+            </li>
+            <li>
+              <img src="./images/img-jpg-1.jpg" alt="phone" width="360" />
+            </li>
+            <li>
+              <img
+                src="./images/img-jpg-3.jpg"
+                alt="hand with both"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--/Section#3-photo-->
 
       <!--Team-Section#4-->
       <section>
-        <h2 class="team">Our Team</h2>
-        <ul class="link">
-          <li>
-            <img src="./images/logo-img1.jpg" alt="PDesigner" width="264" />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-quote">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/logo-img2.jpg" alt="frontend" width="264" />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-quote">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/logo-img3.jpg" alt="Marketing" width="264" />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-quote">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/logo-img4.jpg" alt="UI" width="264" />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-quote">UI Designer</p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="team">Our Team</h2>
+          <ul class="link">
+            <li>
+              <img src="./images/logo-img1.jpg" alt="PDesigner" width="264" />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-quote">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/logo-img2.jpg" alt="frontend" width="264" />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-quote">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/logo-img3.jpg" alt="Marketing" width="264" />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-quote">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/logo-img4.jpg" alt="UI" width="264" />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-quote">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--/Team-Section#4-->
     </main>
     <!--TheEnd-->
     <footer>
-      <a class="logo-web list" href="./index.html"
-        >Web<span class="logo-color list">Studio</span></a
-      >
-      <p class="notes">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="conteiner">
+        <a class="logo-web list" href="./index.html"
+          >Web<span class="logo-color list">Studio</span></a
+        >
+        <p class="notes">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
