--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="logo-web list" href="./index.html"
             >Web<span class="logo-studio list">Studio</span></a
           >
-          <ul>
+          <ul class="header-flex">
             <li class="link">
               <a class="list header-head" href="./index.html">Studio</a>
             </li>
@@ -39,11 +39,11 @@
           </ul>
         </nav>
         <address>
-          <ul class="link">
+          <ul class="link header-flex">
             <li>
               <a
                 href="mailto:info@devstudio.com"
-                class="header-link list header-head"
+                class="header-link list"
                 >info@devstudio.com</a
               >
             </li>
@@ -74,7 +74,7 @@
       <!--Discription-section#2-->
       <section class="hero">
         <div class="conteiner">
-          <h2 hidden>Advantage</h2>
+          <h2 class="visually-hidden">Advantage</h2>
           <ul class="hero-list link cont-hero">
             <li class="hero-item">
               <h3 class="hero-name">Strategy</h3>
@@ -118,14 +118,15 @@
       <section>
         <div class="conteiner">
           <h2 class="pic cont-img">What are we doing</h2>
-          <ul class="link">
-            <li>
+          <div class="photo-conteiner">
+          <ul class="link images">
+            <li class="images">
               <img src="./images/img-jpg-2.jpg" alt="screen" width="360" />
             </li>
-            <li>
+            <li class="images">
               <img src="./images/img-jpg-1.jpg" alt="phone" width="360" />
             </li>
-            <li>
+            <li class="images">
               <img
                 src="./images/img-jpg-3.jpg"
                 alt="hand with both"
@@ -134,6 +135,7 @@
             </li>
           </ul>
         </div>
+        </div>
       </section>
       <!--/Section#3-photo-->
 
@@ -141,23 +143,23 @@
       <section>
         <div class="conteiner">
           <h2 class="team">Our Team</h2>
-          <ul class="link">
-            <li>
+          <ul class="link card-conteiner">
+            <li class="team-conteiner">
               <img src="./images/logo-img1.jpg" alt="PDesigner" width="264" />
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-quote">Product Designer</p>
             </li>
-            <li>
+            <li class="team-conteiner">
               <img src="./images/logo-img2.jpg" alt="frontend" width="264" />
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-quote">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-conteiner">
               <img src="./images/logo-img3.jpg" alt="Marketing" width="264" />
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-quote">Marketing</p>
             </li>
-            <li>
+            <li class="team-conteiner">
               <img src="./images/logo-img4.jpg" alt="UI" width="264" />
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-quote">UI Designer</p>
