--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,12 @@
   </head>
   <body>
     <header class="header">
+      <div class="conteiner">
       <nav class="header-navigation">
         <a class="logo-web list" href="./index.html"
           >Web<span class="logo-studio list">Studio</span></a
         >
-        <ul>
+        <ul class="header-flex">
           <li class="header-item link">
             <a class="list header-head" href="./index.html">Studio</a>
           </li>
@@ -29,7 +30,7 @@
         </ul>
       </nav>
       <address>
-        <ul class="link">
+        <ul class="link header-flex">
           <li>
             <a href="mailto:info@devstudio.com" class="header-link list header-head"
               >info@devstudio.com</a
@@ -41,6 +42,7 @@
             >
           </li>
         </ul>
+      </div>
       </address>
     </header>
 
@@ -49,7 +51,8 @@
     <main>
       <h1 class="visually-hidden">Portfolio</h1>
         <section class="button">
-          <ul class="link">
+          <div class="conteiner">
+          <ul class="link button">
             <li type="button">
               <button class="button-link btn list">All</button>
             </li>
@@ -66,10 +69,12 @@
               <button class="button-link btn list">Marketing</button>
             </li>
           </ul>
+        </div>
         </section>
       
       <!--Section-images-->
       <section class="images">
+        <div class="conteiner">
         <ul class="link">
           <li>
             <a href="#" class="list">
@@ -180,9 +185,11 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer>
+      <div class="conteiner">
       <a class="logo-web list" href="./index.html"
         >Web<span class="logo-color list">Studio</span></a
       >
@@ -190,6 +197,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
