--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     <!--TheEnd-->
     <footer>
       <div class="conteiner">
+        <div class="footer-cont">
         <a class="logo-web list" href="./index.html"
           >Web<span class="logo-color list">Studio</span></a
         >
@@ -179,6 +180,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
       </div>
     </footer>
   </body>
