--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
           <h1 class="item-text conteiner-head">
             Effective Solutions for Your Business
           </h1>
-          <div class="cont-btn">
-            <button class="item-button-title button-style" type="button">
+            <button class="item-button-title button-style item-cont-button" type="button">
               Order Service
             </button>
-          </div>
         </div>
       </section>
 
@@ -118,7 +116,6 @@
       <section>
         <div class="conteiner">
           <h2 class="pic cont-img">What are we doing</h2>
-          <div class="photo-conteiner">
           <ul class="link images">
             <li class="images">
               <img src="./images/img-jpg-2.jpg" alt="screen" width="360" />
@@ -135,34 +132,41 @@
             </li>
           </ul>
         </div>
-        </div>
       </section>
       <!--/Section#3-photo-->
 
       <!--Team-Section#4-->
-      <section>
+      <section class="team-section">
         <div class="conteiner">
           <h2 class="team">Our Team</h2>
           <ul class="link card-conteiner">
             <li class="team-conteiner">
               <img src="./images/logo-img1.jpg" alt="PDesigner" width="264" />
+             <div class="team-text">
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-quote">Product Designer</p>
+            </div>
             </li>
             <li class="team-conteiner">
               <img src="./images/logo-img2.jpg" alt="frontend" width="264" />
+             <div class="team-text">
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-quote">Frontend Developer</p>
+            </div>
             </li>
             <li class="team-conteiner">
               <img src="./images/logo-img3.jpg" alt="Marketing" width="264" />
+             <div class="team-text">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-quote">Marketing</p>
+            </div>
             </li>
             <li class="team-conteiner">
               <img src="./images/logo-img4.jpg" alt="UI" width="264" />
-              <h3 class="team-name">Daniel Wilson</h3>
+             <div class="team-text">
+             <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-quote">UI Designer</p>
+            </div>
             </li>
           </ul>
         </div>
