--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,8 @@
       <!--Section-images-->
       <section class="images">
         <div class="conteiner">
-        <ul class="link">
-          <li>
+        <ul class="link images-cont">
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img1.web.jpg.jpg"
@@ -84,11 +84,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Banking App Interface Concept</h2>
               <p class="text-title">App</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img2.quarcode.jpg.jpg"
@@ -96,10 +98,12 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Cashless Payment</h2>
               <p class="text-title">Marketing</p>
             </a>
-          </li>
+          </div>
+          </li class="images-border">
           <li>
             <a href="#" class="list">
               <img
@@ -108,11 +112,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Meditaion App</h2>
               <p class="text-title">App</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img4.car.jpg.jpg"
@@ -120,11 +126,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Taxi Service</h2>
               <p class="text-title">Marketing</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img5.phone.jpg.jpg"
@@ -132,11 +140,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Screen Illustrations</h2>
               <p class="text-title">Design</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img6.girl.jpg.jpg"
@@ -144,11 +154,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont"></div>
               <h2 class="text">Online Courses</h2>
               <p class="text-title">Marketing</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img7.maket.jpg.jpg"
@@ -156,11 +168,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Instagram Stories Concept</h2>
               <p class="text-title">Design</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img8.net.jpg.jpg"
@@ -168,11 +182,13 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Organic food</h2>
               <p class="text-title">Web Site</p>
             </a>
+          </div>
           </li>
-          <li>
+          <li class="images-border">
             <a href="#" class="list">
               <img
                 src="./images/img9.coffee.jpg.jpg"
@@ -180,9 +196,11 @@
                 width="360"
                 height="300"
               />
+              <div class="images-text-cont">
               <h2 class="text">Fresh Coffee</h2>
               <p class="text-title">Web Site</p>
             </a>
+          </div>
           </li>
         </ul>
       </div>
