--- a/portfolio.html
+++ b/portfolio.html
@@ -154,7 +154,7 @@
                 width="360"
                 height="300"
               />
-              <div class="images-text-cont"></div>
+              <div class="images-text-cont">
               <h2 class="text">Online Courses</h2>
               <p class="text-title">Marketing</p>
             </a>
@@ -208,6 +208,7 @@
     </main>
     <footer>
       <div class="conteiner">
+        <div class="footer-cont">
       <a class="logo-web list" href="./index.html"
         >Web<span class="logo-color list">Studio</span></a
       >
@@ -215,6 +216,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </div>
     </footer>
   </body>
