--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <!--/Discription-section#2-->
 
       <!--Section#3-photo-->
-      <section>
+      <section class="img">
         <div class="conteiner">
           <h2 class="pic cont-img">What are we doing</h2>
           <ul class="link images">
@@ -176,7 +176,6 @@
     <!--TheEnd-->
     <footer>
       <div class="conteiner">
-        <div class="footer-cont">
         <a class="logo-web list" href="./index.html"
           >Web<span class="logo-color list">Studio</span></a
         >
@@ -184,7 +183,6 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
       </div>
     </footer>
   </body>
