--- a/portfolio.html
+++ b/portfolio.html
@@ -49,10 +49,10 @@
     
     <!--SectionNavigation-->
     <main>
-      <h1 class="visually-hidden">Portfolio</h1>
-        <section class="button">
+        <section class="button-cont">
           <div class="conteiner">
-          <ul class="link button">
+            <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="link button-list">
             <li type="button">
               <button class="button-link btn list">All</button>
             </li>
@@ -70,11 +70,6 @@
             </li>
           </ul>
         </div>
-        </section>
-      
-      <!--Section-images-->
-      <section class="images">
-        <div class="conteiner">
         <ul class="link images-cont">
           <li class="images-border">
             <a href="#" class="list">
@@ -87,8 +82,8 @@
               <div class="images-text-cont">
               <h2 class="text">Banking App Interface Concept</h2>
               <p class="text-title">App</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -101,8 +96,8 @@
               <div class="images-text-cont">
               <h2 class="text">Cashless Payment</h2>
               <p class="text-title">Marketing</p>
-            </a>
           </div>
+        </a>
           </li class="images-border">
           <li>
             <a href="#" class="list">
@@ -115,8 +110,8 @@
               <div class="images-text-cont">
               <h2 class="text">Meditaion App</h2>
               <p class="text-title">App</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -129,8 +124,8 @@
               <div class="images-text-cont">
               <h2 class="text">Taxi Service</h2>
               <p class="text-title">Marketing</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -143,8 +138,8 @@
               <div class="images-text-cont">
               <h2 class="text">Screen Illustrations</h2>
               <p class="text-title">Design</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -157,8 +152,8 @@
               <div class="images-text-cont">
               <h2 class="text">Online Courses</h2>
               <p class="text-title">Marketing</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -171,8 +166,8 @@
               <div class="images-text-cont">
               <h2 class="text">Instagram Stories Concept</h2>
               <p class="text-title">Design</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -185,8 +180,8 @@
               <div class="images-text-cont">
               <h2 class="text">Organic food</h2>
               <p class="text-title">Web Site</p>
-            </a>
           </div>
+        </a>
           </li>
           <li class="images-border">
             <a href="#" class="list">
@@ -199,11 +194,10 @@
               <div class="images-text-cont">
               <h2 class="text">Fresh Coffee</h2>
               <p class="text-title">Web Site</p>
-            </a>
           </div>
+        </a>
           </li>
         </ul>
-      </div>
       </section>
     </main>
     <footer>
