--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
 
       <!--Discription-section#2-->
-      <section class="hero">
+      <section class="hero section">
         <div class="conteiner">
           <h2 class="visually-hidden">Advantage</h2>
           <ul class="hero-list link cont-hero">
@@ -136,7 +136,7 @@
       <!--/Section#3-photo-->
 
       <!--Team-Section#4-->
-      <section class="team-section">
+      <section class="team-section section">
         <div class="conteiner">
           <h2 class="team">Our Team</h2>
           <ul class="link card-conteiner">
