--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     
     <!--SectionNavigation-->
     <main>
-        <section class="button-cont">
+        <section class="button-cont section">
           <div class="conteiner">
             <h1 class="visually-hidden">Portfolio</h1>
           <ul class="link button-list">
@@ -69,7 +69,7 @@
               <button class="button-link btn list">Marketing</button>
             </li>
           </ul>
-        </div>
+       
         <ul class="link images-cont">
           <li class="images-border">
             <a href="#" class="list">
@@ -198,6 +198,7 @@
         </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer>
